--- a/algebraic_infoDecomp.ipynb
+++ b/algebraic_infoDecomp.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. A class to calculating the algebraic PID\n",
+    "# 1. A class to calculate the algebraic PID\n",
     "To interface nicely with `dit.pid`, we create a new class that inherits a `dit.pid.measures` class with the right redundancy measure. However, we do not want `dit` to calculate the atoms, as we can do it faster. We only use `dit` to calculate the redundancy measures. "
    ]
   },
